--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -8,7 +8,7 @@
         @apply text-[14px] leading-[1.4];
       }
       
-      .text-default {
+      .text-regular {
         @apply text-[16px] leading-[1.6];
       }
       
@@ -64,4 +64,73 @@
         @apply text-[18px] leading-[1.6];
       }
       
+} */
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+
+  .text-small {
+    @apply text-xs sm:text-sm md:text-base lg:text-lg xl:text-xl leading-normal;
+  }
+
+  .text-regular {
+    @apply text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl leading-normal;
+  }
+
+  .text-medium {
+    @apply text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl leading-normal;
+  }
+
+  .text-large {
+    @apply text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl leading-normal;
+  }
+
+  .text-xlarge {
+    @apply text-xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl leading-normal;
+  }
+
+  .heading-xlarge {
+    @apply text-5xl sm:text-6xl md:text-7xl lg:text-8xl xl:text-9xl leading-tight;
+  }
+
+  .heading-medium {
+    @apply text-4xl sm:text-5xl md:text-6xl lg:text-7xl xl:text-8xl leading-normal;
+  }
+
+  .heading-h1-italic {
+    @apply text-4xl sm:text-5xl md:text-6xl lg:text-7xl xl:text-8xl leading-tight italic;
+  }
+
+  .heading-h1 {
+    @apply text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl leading-normal;
+  }
+
+  .heading-h2-italic {
+    @apply text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl leading-tight italic;
+  }
+
+  .heading-h2 {
+    @apply text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl leading-normal;
+  }
+
+  .heading-h3 {
+    @apply text-xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl leading-normal;
+  }
+
+  .heading-h4 {
+    @apply text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl leading-normal;
+  }
+
+  .heading-h5 {
+    @apply text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl leading-normal;
+  }
+
+  .heading-h6 {
+    @apply text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl leading-normal;
+  }
+
 }
