--- a/app/globals.css
+++ b/app/globals.css
@@ -26,11 +26,12 @@ body {
   max-width: 100%;
   margin: 0;
   padding: 0;
-  color: #fff;
+  color: #050505;
   font-family: "Inter", sans-serif;
   font-weight: 400;
   line-height: 160%;
-  overflow: hidden;
+  scroll-behavior: smooth;
+  /* overflow: hidden; */
 }
 
 .hero {
