--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Merienda:wght@300..900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Merienda:wght@300..900&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Kaushan+Script&family=Merienda:wght@300..900&display=swap");
+
+@import url("https://api.fontshare.com/v2/css?f[]=chillax@200,300,400,500,600,700,1&display=swap"); */
+
+@font-face {
+  font-family: "BitterRose";
+  src:
+    url("/fonts/Bitter Rose.ttf") format("truetype"),
+    url("/fonts/Bitter Rose.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Chillax";
+  src:
+    url("/fonts/Chillax-Regular.otf") format("opentype"),
+    url("/fonts/Chillax-Medium.otf") format("opentype"),
+    url("/fonts/Chillax-Bold.otf") format("opentype");
+  font-weight: normal;
+  font-display: swap;
+  font-style: normal;
+}
 
 @import url("../styles/theme.css");
 
@@ -29,11 +51,142 @@ body {
   margin: 0;
   padding: 0;
   color: #050505;
-  font-family: "Inter", sans-serif;
+  font-family: "Chillax", sans-serif;
   font-weight: 400;
   line-height: 160%;
   scroll-behavior: smooth;
   /* overflow: hidden; */
+}
+
+h1 {
+  font-size: 4rem;
+  font-weight: 500;
+  line-height: 110%;
+}
+
+h2 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  line-height: 110%;
+}
+
+h3 {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 120%;
+}
+
+h4 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+h5 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+h6 {
+  font-size: 1.125rem;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.heading-h1-italic {
+  color: #face8d;
+  font-family: "BitterRose", sans-serif;
+  font-size: 5rem;
+  font-weight: 400;
+  line-height: 90%;
+}
+
+.heading-h2-italic {
+  color: #face8d;
+  font-family: "BitterRose", sans-serif;
+  font-size: 4rem;
+  font-weight: 400;
+  line-height: 90%;
+}
+
+.heading-h3-italic {
+  color: #face8d;
+  font-family: "BitterRose", sans-serif;
+  font-size: 3.5rem;
+  font-weight: 400;
+  line-height: 90%;
+}
+
+.heading-h4-italic {
+  color: #face8d;
+  font-family: "BitterRose", sans-serif;
+  font-size: 3rem;
+  font-weight: 400;
+}
+
+.heading-h5-italic {
+  color: #face8d;
+  font-family: "BitterRose", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+
+.heading-h6-italic {
+  color: #face8d;
+  font-family: "BitterRose", sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.heading-xlarge {
+  font-family: "Chillax", sans-serif;
+  font-size: 10rem;
+  font-weight: 500;
+  line-height: 100%;
+}
+
+.heading-medium {
+  letter-spacing: -2px;
+  font-family: "Chillax", sans-serif;
+  font-size: 5rem;
+  font-weight: 500;
+  line-height: 100%;
+}
+
+.text-xlarge {
+  font-size: 1.5rem;
+  line-height: 160%;
+}
+
+.text-large {
+  font-size: 1.25rem;
+  line-height: 160%;
+}
+
+.text-regular {
+  font-size: 1rem;
+  line-height: 160%;
+}
+
+.text-small {
+  font-size: 0.875rem;
+  line-height: 160%;
+}
+
+.text-tiny {
+  font-size: 0.75rem;
+  line-height: 160%;
+}
+
+.menu-title {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.menu-price {
+  font-size: 1.25rem;
+  font-weight: 400;
 }
 
 .hero {
@@ -46,7 +199,7 @@ body {
 }
 
 .font-bitter {
-  font-family: "Bitter", serif;
+  font-family: "BitterRose", sans-serif;
 }
 
 .font-merinda {
@@ -123,8 +276,127 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
   object-fit: cover;
 }
 
-
 /* .outer {
   overflow-x: hidden;
 } */
 
+@media screen and (max-width: 991px) {
+  h1 {
+    font-size: 3.5rem;
+  }
+
+  .heading-xlarge {
+    font-size: 7rem;
+  }
+
+  .heading-h2 {
+    font-size: 3rem;
+  }
+
+  .heading-large {
+    font-size: 5rem;
+  }
+
+  .text-xlarge {
+    font-size: 1.25rem;
+  }
+
+  .heading-h1 {
+    font-size: 3.5rem;
+  }
+  .heading-medium,
+  .heading-h1-italic {
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  h4 {
+    font-size: 1.25rem;
+  }
+
+  .heading-xlarge {
+    font-size: 5rem;
+  }
+
+  .heading-h2 {
+    font-size: 2.5rem;
+  }
+
+  .heading-large {
+    font-size: 3.25rem;
+  }
+
+  .text-large {
+    font-size: 1.125rem;
+  }
+
+  .text-size-xlarge {
+    font-size: 1.125rem;
+  }
+
+  .heading-h4 {
+    font-size: 1.5rem;
+  }
+
+  .heading-h1 {
+    font-size: 3rem;
+  }
+  .heading-h3 {
+    font-size: 1.5rem;
+  }
+
+  .heading-medium {
+    font-size: 3.125rem;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  h5 {
+    font-size: 1.125rem;
+  }
+
+  h6 {
+    font-size: 1rem;
+  }
+
+  .heading-xlarge {
+    font-size: 4rem;
+  }
+
+  .heading-large {
+    font-size: 2.5rem;
+  }
+
+  .heading-h5 {
+    font-size: 1.125rem;
+  }
+
+  .heading-h1 {
+    font-size: 2.75rem;
+  }
+
+  .heading-h6 {
+    font-size: 1rem;
+  }
+
+  .heading-medium {
+    font-size: 2.5rem;
+  }
+
+  .heading-h1-italic {
+    font-size: 3rem;
+  }
+}
