--- a/app/globals.css
+++ b/app/globals.css
@@ -400,3 +400,27 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
     font-size: 3rem;
   }
 }
+
+
+
+.card {
+  width: 33.33vw;
+  height: 100vh;
+  position: relative;
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 100vw;
+  }
+}
+
+
+.scroll-container::-webkit-scrollbar {
+  display: none;
+}
+
+.scroll-container {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
