--- a/app/globals.css
+++ b/app/globals.css
@@ -44,9 +44,10 @@
   }
 }
 
-html{
-scroll-behavior: smooth;
-transition: all 400ms ease;
+html {
+  scroll-behavior: smooth;
+  transition: all 400ms ease;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -57,13 +58,12 @@ body {
   margin: 0;
   padding: 0;
   background-color: #050505;
-  
+
   font-family: "Chillax", sans-serif;
   font-weight: 400;
   line-height: 160%;
   scroll-behavior: smooth;
   overflow-x: hidden;
-
 }
 
 h1 {
@@ -102,7 +102,7 @@ h6 {
   line-height: 120%;
 }
 
-a{
+a {
   transition: all 800ms ease;
   scroll-behavior: smooth;
 }
@@ -354,8 +354,6 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
   }
 }
 
-
-
 .card {
   width: 33.33vw;
   height: 100vh;
@@ -367,7 +365,6 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
     width: 100vw;
   }
 }
-
 
 .scroll-container::-webkit-scrollbar {
   display: none;
@@ -398,12 +395,11 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
 }
 
 .scroll-section h3 {
-  color:  #e6e6e6;
+  color: #e6e6e6;
   letter-spacing: clamp(1rem, 2vw, 4rem);
   font-size: clamp(1rem, 2vw, 4rem);
   text-transform: uppercase;
 }
-
 
 .gallery1 {
   background-image: url("../public/assets/images/hero.webp");
@@ -445,6 +441,7 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
 .slide-down {
   animation: slide-down 0.5s ease-out;
 }
+
 @keyframes slide-up {
   0% {
     transform: translateY(0);
@@ -460,5 +457,31 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
   }
   100% {
     transform: translateY(50px);
+  }
+}
+
+.intro-slide-down {
+  animation: intro-slide-down 1s ease-in;
+}
+
+@keyframes intro-slide-down {
+  0% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.intro-slide-up {
+  animation: intro-slide-up 1s ease-in;
+}
+
+@keyframes intro-slide-up {
+  0% {
+    transform: translateY(2px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
