--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,7 @@
 html {
   scroll-behavior: smooth;
   transition: all 400ms ease;
-  scroll-behavior: smooth;
+
 }
 
 body {
@@ -106,6 +106,8 @@ a {
   transition: all 800ms ease;
   scroll-behavior: smooth;
 }
+
+
 
 .heading-h1-italic {
   color: #face8d;
@@ -461,7 +463,7 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
 }
 
 .intro-slide-down {
-  animation: intro-slide-down 1s ease-in;
+  animation: intro-slide-down .5s ease-in-out;
 }
 
 @keyframes intro-slide-down {
@@ -474,14 +476,60 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
 }
 
 .intro-slide-up {
-  animation: intro-slide-up 1s ease-in;
+  animation: intro-slide-up .5s ease-in-out;
 }
 
 @keyframes intro-slide-up {
   0% {
-    transform: translateY(2px);
+    transform: translateY(20px);
   }
   100% {
     transform: translateY(0);
   }
+}
+
+
+
+@media screen and (max-width: 479px) {
+  h5 {
+      font-size:1.125rem
+  }
+
+  h6 {
+      font-size: 1rem
+  }
+
+  .heading-xlarge {
+      font-size: 4rem
+  }
+
+  .menu-title {
+    font-size: 1.25rem;
+}
+
+  .heading-large {
+      font-size: 2.5rem
+  }
+
+  .heading-h5 {
+      font-size: 1.125rem
+  }
+
+  .heading-h1 {
+      font-size: 2.75rem
+  }
+  .heading-h6 {
+      font-size: 1rem
+  }
+
+  .heading-medium {
+      font-size: 2.5rem
+  }
+
+ 
+
+  .menu-price {
+      font-size: 1rem
+  }
+
 }
