--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,6 @@
 html {
   scroll-behavior: smooth;
   transition: all 400ms ease;
-
 }
 
 body {
@@ -106,8 +105,6 @@ a {
   transition: all 800ms ease;
   scroll-behavior: smooth;
 }
-
-
 
 .heading-h1-italic {
   color: #face8d;
@@ -206,6 +203,14 @@ a {
 
 .hero {
   background-image: url("../public/assets/images/hero.webp");
+  background-size: contain;
+  z-index: -1;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
+
+.page-hero {
   background-size: contain;
   z-index: -1;
   background-size: cover;
@@ -388,9 +393,24 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
   position: relative;
 }
 
+.scroll-section-classes-inner {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+}
+
 .scroll-section {
   height: 100vh;
   width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.scroll-section-classes {
+  height: 100vh;
+  width: 33.33vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -463,7 +483,7 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
 }
 
 .intro-slide-down {
-  animation: intro-slide-down .5s ease-in-out;
+  animation: intro-slide-down 0.5s ease-in-out;
 }
 
 @keyframes intro-slide-down {
@@ -476,7 +496,7 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
 }
 
 .intro-slide-up {
-  animation: intro-slide-up .5s ease-in-out;
+  animation: intro-slide-up 0.5s ease-in-out;
 }
 
 @keyframes intro-slide-up {
@@ -488,48 +508,43 @@ background: linear-gradient(90deg, rgba(46,46,45,1) 0%, rgba(115,115,114,0) 55%)
   }
 }
 
-
-
 @media screen and (max-width: 479px) {
   h5 {
-      font-size:1.125rem
+    font-size: 1.125rem;
   }
 
   h6 {
-      font-size: 1rem
+    font-size: 1rem;
   }
 
   .heading-xlarge {
-      font-size: 4rem
+    font-size: 4rem;
   }
 
   .menu-title {
     font-size: 1.25rem;
-}
+  }
 
   .heading-large {
-      font-size: 2.5rem
+    font-size: 2.5rem;
   }
 
   .heading-h5 {
-      font-size: 1.125rem
+    font-size: 1.125rem;
   }
 
   .heading-h1 {
-      font-size: 2.75rem
+    font-size: 2.75rem;
   }
   .heading-h6 {
-      font-size: 1rem
+    font-size: 1rem;
   }
 
   .heading-medium {
-      font-size: 2.5rem
+    font-size: 2.5rem;
   }
-
- 
 
   .menu-price {
-      font-size: 1rem
+    font-size: 1rem;
   }
-
 }
